Fix HTML for better readability
 * Use #wrapper from mozfr.css to avoid a full-width body
 * Remove all spurious spaces
 * Use <p> where appropriate to have a similar text in HTML and browser
 * Display by default all specific instructions to avoid confusing JS
 * Minimal changes to copy text

--- a/style.css
+++ b/style.css
@@ -1,21 +1,7 @@
 #warning{
 	color:red
 }
-#windows, #mac, #linux, #cartesd{
-	display:none
-}
-#windows:target{
-	display:block
-}
-#mac:target{
-	display:block
-}
-#linux:target{
-	display:block
-}
-#cartesd:target{
-	display:block
-}
+
 table, td, th{
 	border: 1px solid black
 }
